The app is running again

--- a/app/src/main/res/layout/activity_ende.xml
+++ b/app/src/main/res/layout/activity_ende.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="my.awesome.htfquiz.Ende">
+    tools:context="io.lxkasmehl.heifaaachenquiz.Ende">
 
     <include
         android:id="@+id/include"
