--- a/app/src/main/res/layout/activity_datenschutz.xml
+++ b/app/src/main/res/layout/activity_datenschutz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="io.lxkasmehl.heifaaachenquiz.datenschutz">
+    tools:context="my.awesome.htfquiz.datenschutz">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/relativeLayout2"
