--- a/app/src/main/res/layout/activity_spiel.xml
+++ b/app/src/main/res/layout/activity_spiel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context="io.lxkasmehl.heifaaachenquiz.Spiel">
+    tools:context="my.awesome.htfquiz.Spiel">
 
     <include
         layout="@layout/custom_toolbar"/>
